ppx/test/element_attribute_error.expected
File "element_attribute_error.ml", line 3, characters 24-38:
3 | let%component make () = div ~lola:1 ()
                            ^^^^^^^^^^^^^^
Error: prop 'lola' isn't a valid prop for a 'div'
